# jeu-conseil-priv-

./: .coverage  .coveragerc  .gitignore  .pre-commit-config.yaml  Aide-mémoire.md  Conversations.txt  README.md  arbre.txt  pyproject.toml  pytest.ini  structure.sh
docs/: .~lock.Instructions v2.odt#  Instructions v2.odt
docs/archives/: Instructions.odt
docs/regles/: exemple.yaml  reforme-x.yaml
docs/schemas/: regles.schema-essais.yaml  regles.schema.json  regles.schema.yaml
docs/schemas/backup/: regles.schema.json
infra/compose/: .env  docker-compose.dev.yml
outils/scripts/: test_api.sh
